changes labels from 0/1 to real/fake (P.S. for mental peace and confusion i had )

--- a/Notebooks/Preprocessing.ipynb
+++ b/Notebooks/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8252a5a9",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "817c0240",
    "metadata": {},
    "outputs": [
@@ -48,42 +48,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>By 2025, Ninety Percent of All Americans Will ...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>fake</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Barbaro's Owner Honed His Business Sense in Ba...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>New Chase Coupon Code gives 450 dollars listed...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>fake</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Lionel Casson, Who Wrote of Ancient Maritime H...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>IL-House-Trend - SFGate AP Elections 11-08-201...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                text  label\n",
-       "0  By 2025, Ninety Percent of All Americans Will ...      1\n",
-       "1  Barbaro's Owner Honed His Business Sense in Ba...      0\n",
-       "2  New Chase Coupon Code gives 450 dollars listed...      1\n",
-       "3  Lionel Casson, Who Wrote of Ancient Maritime H...      0\n",
-       "4  IL-House-Trend - SFGate AP Elections 11-08-201...      0"
+       "                                                text label\n",
+       "0  By 2025, Ninety Percent of All Americans Will ...  fake\n",
+       "1  Barbaro's Owner Honed His Business Sense in Ba...  real\n",
+       "2  New Chase Coupon Code gives 450 dollars listed...  fake\n",
+       "3  Lionel Casson, Who Wrote of Ancient Maritime H...  real\n",
+       "4  IL-House-Trend - SFGate AP Elections 11-08-201...  real"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d4ea4369",
    "metadata": {},
    "outputs": [
@@ -109,8 +109,8 @@
       " #   Column  Dtype \n",
       "---  ------  ----- \n",
       " 0   text    object\n",
-      " 1   label   int64 \n",
-      "dtypes: int64(1), object(1)\n",
+      " 1   label   object\n",
+      "dtypes: object(2)\n",
       "memory usage: 44.7+ MB\n"
      ]
     }
