--- a/Notebooks/data_gathering.ipynb
+++ b/Notebooks/data_gathering.ipynb
@@ -205,8 +205,8 @@
     "# Chunk size - safe for 32 GB RAM\n",
     "chunk_size = 150000\n",
     "# Classes to keep from FakeNewsCorpus\n",
-    "fake_types = ['fake', 'satire']      # label = 1\n",
-    "real_types = ['reliable']            # label = 0\n",
+    "fake_types = ['fake', 'satire']      # label = fake\n",
+    "real_types = ['reliable']            # label = real\n",
     "\n",
     "# Temporary files (will be deleted later)\n",
     "temp_fake_corpus = r'H:\\\\AIML_project\\\\temp_fake_corpus.csv'\n",
@@ -230,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "57it [04:50,  5.09s/it]\n"
+      "57it [07:59,  8.42s/it]\n"
      ]
     },
     {
@@ -267,13 +267,13 @@
     "    # Fake / Satire\n",
     "    fake = chunk[chunk['type'].str.lower().isin(fake_types)].copy()\n",
     "    if not fake.empty:\n",
-    "        fake['label'] = 1\n",
+    "        fake['label'] = 'fake'\n",
     "        fake_chunks.append(fake[['text', 'label']])\n",
     "\n",
     "    # Reliable\n",
     "    real = chunk[chunk['type'].str.lower().isin(real_types)].copy()\n",
     "    if not real.empty:\n",
-    "        real['label'] = 0\n",
+    "        real['label'] = 'real'\n",
     "        real_chunks.append(real[['text', 'label']])\n",
     "\n",
     "# Save filtered parts (to avoid RAM explosion)\n",
@@ -302,8 +302,8 @@
       "Small combined (ISOT + WELFake):\n",
       "(102322, 2)\n",
       "label\n",
-      "0    54.7\n",
-      "1    45.3\n",
+      "real    54.7\n",
+      "fake    45.3\n",
       "Name: proportion, dtype: float64\n"
      ]
     }
@@ -316,10 +316,10 @@
     "# ISOT (your labels are already correct)\n",
     "print(\"Loading ISOT...\")\n",
     "isot_fake = pd.read_csv('https://media.githubusercontent.com/media/Gyaanendra/SML-Project-cset211/refs/heads/main/raw_data/Fake.csv')\n",
-    "isot_fake['label'] = 1  # fake = 1\n",
+    "isot_fake['label'] = 'fake'  # fake = fake\n",
     "\n",
     "isot_true = pd.read_csv('https://media.githubusercontent.com/media/Gyaanendra/SML-Project-cset211/refs/heads/main/raw_data/True.csv')\n",
-    "isot_true['label'] = 0  # real = 0\n",
+    "isot_true['label'] = 'real'  # real = real\n",
     "\n",
     "isot = pd.concat([isot_fake[['title','text','label']], isot_true[['title','text','label']]], ignore_index=True)\n",
     "\n",
@@ -327,7 +327,7 @@
     "print(\"\\nLoading & fixing WELFake...\")\n",
     "wel = pd.read_csv('https://media.githubusercontent.com/media/Gyaanendra/SML-Project-cset211/refs/heads/main/raw_data/WELFake_Dataset.csv')\n",
     "wel = wel.drop(columns=['Unnamed: 0'], errors='ignore')\n",
-    "wel['label'] = wel['label'].map({0: 0, 1: 1})   # 0→real=0, 1→fake=1 (now matches ISOT convention)\n",
+    "wel['label'] = wel['label'].map({0: 'real', 1: 'fake'})   # 0→real=real, 1→fake=fake (now matches ISOT convention)\n",
     "\n",
     "wel['text'] = (wel['title'].fillna('') + \" \" + wel['text'].fillna('')).str.strip()\n",
     "\n",
@@ -360,8 +360,8 @@
       "Total rows: 2,930,584\n",
       "Label distribution:\n",
       "label\n",
-      "0    65.1\n",
-      "1    34.9\n",
+      "real    65.1\n",
+      "fake    34.9\n",
       "Name: proportion, dtype: float64\n",
       "Temp files removed.\n"
      ]
@@ -399,30 +399,6 @@
     "os.remove(temp_real_corpus)\n",
     "print(\"Temp files removed.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f80b24d3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6abb55b1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9527194",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
