--- a/Model_desgin/Notebooks/Preprocessing.ipynb
+++ b/Model_desgin/Notebooks/Preprocessing.ipynb
@@ -121,11 +121,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "514f32cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label\n",
+       "real    1908086\n",
+       "fake    1022498\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['label'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
