--- a/Model_desgin/Notebooks/Preprocessing.ipynb
+++ b/Model_desgin/Notebooks/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8252a5a9",
    "metadata": {},
    "outputs": [],
@@ -103,15 +103,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
+      "<class 'pandas.DataFrame'>\n",
       "RangeIndex: 2930584 entries, 0 to 2930583\n",
       "Data columns (total 2 columns):\n",
-      " #   Column  Dtype \n",
-      "---  ------  ----- \n",
-      " 0   text    object\n",
-      " 1   label   object\n",
-      "dtypes: object(2)\n",
-      "memory usage: 44.7+ MB\n"
+      " #   Column  Dtype\n",
+      "---  ------  -----\n",
+      " 0   text    str  \n",
+      " 1   label   str  \n",
+      "dtypes: str(2)\n",
+      "memory usage: 44.7 MB\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "514f32cb",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,88 +145,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a8e6a328",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 2344467, Val: 293058, Test: 293059\n",
+      "Label ratios preserved: label\n",
+      "0    0.651094\n",
+      "1    0.348906\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Map labels to 0/1 if needed (real=0, fake=1 or vice versa)\n",
+    "df['label'] = df['label'].map({'real': 0, 'fake': 1})\n",
+    "\n",
+    "# Stratified split: first train + temp, then split temp into val/test\n",
+    "train_df, temp_df = train_test_split(\n",
+    "    df, test_size=0.2, stratify=df['label'], random_state=42\n",
+    ")\n",
+    "\n",
+    "val_df, test_df = train_test_split(\n",
+    "    temp_df, test_size=0.5, stratify=temp_df['label'], random_state=42\n",
+    ")\n",
+    "\n",
+    "print(f\"Train: {len(train_df)}, Val: {len(val_df)}, Test: {len(test_df)}\")\n",
+    "print(\"Label ratios preserved:\", train_df['label'].value_counts(normalize=True))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cb237a7e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_df.to_csv('../Datasets/non_aug/train.csv', index=False)\n",
+    "val_df.to_csv('../Datasets/non_aug/val.csv', index=False)\n",
+    "test_df.to_csv('../Datasets/non_aug/test.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bce947ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94b1a556",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04717540",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09b6cf10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abb952bb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea854ae5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "758e3ee7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c62c5c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2c0c203",
+   "id": "88e8e1a3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -234,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AIML_project",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
